Added bootstrap and new carousel

--- a/index.njk
+++ b/index.njk
@@ -1,6 +1,7 @@
 ---
 layout: base.njk
 ---
+<div class="heading"><h1 class="index-title">PAST EXHIBITIONS</h1></div>
 <div class="exhibition-grid">
 {% for exhibition in exhibitions %}
   <a href="/exhibitions/{{ exhibition.title | slug }}/" class="exhibition-card">
