--- a/exhibition.njk
+++ b/exhibition.njk
@@ -6,18 +6,26 @@ pagination:
   alias: exhibition
 permalink: "exhibitions/{{ exhibition.title | slug }}/"
 ---
-<h1>{{ exhibition.title }}</h1>
-<p>{{ exhibition.location }}</p>
- <p>{{ exhibition.year }}</p>
+<div class="exhibition-details-show">
+  <h1 class="exhib-details-name">{{ exhibition.title }}</h1>
+  <p  class="exhib-details-location">{{ exhibition.location }}</p>
+  <p  class="exhib-details-year">{{ exhibition.year }}</p>
+ </div>
 
-<div class="carousel-container">
-  <div class="carousel">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
     {% for image in exhibition.images %}
-    <div class="carousel-item">
-      <img src="{{ image }}" class="img-fluid" alt="Image from {{ exhibition.title }}">
+      <div class="carousel-item {% if loop.first %}active{% endif %}"> <!-- Set the first item as active -->
+        <img class="d-block w-100" src="{{ image }}" alt="Image from {{ exhibition.title }}">
       </div>
     {% endfor %}
   </div>
-  <button class="carousel-prev" aria-label="Previous image">&lt;</button>
-  <button class="carousel-next" aria-label="Next image">&gt;</button>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
